user-service: add api update status
